add the unordered list

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 <body>
     <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, magnam.</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos iste nesciunt odio aspernatur saepe optio repellendus quae eligendi repudiandae. Necessitatibus dolor velit ipsum iusto eum odio quidem voluptate ullam saepe assumenda dolorum labore eaque voluptatibus est nesciunt, reiciendis, iure obcaecati et qui eligendi eius sint dolore quo minus? Molestiae error laudantium vel commodi neque, repellat atque, impedit iusto doloremque autem quisquam unde in eaque repellendus animi et iste vero ipsam optio ipsum labore? Quia placeat itaque perspiciatis numquam ullam autem, praesentium debitis et eaque voluptates esse maxime voluptatem sint. A qui pariatur magnam esse consequatur distinctio quaerat adipisci, accusantium sint!</p>
+    <ul>
+        <li>Home</li>
+        <li>About us</li>
+        <li>Contact Us</li>
+    </ul>
 </body>
 </html>
